# app/Http/Resources/API/V1/AuthUserInformationResource.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Http\Resources\API\v1;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class AuthUserInformationResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return parent::toArray($request);
+    }
+}
